--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,11 @@ header{
     align-items: center;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     z-index: 100;
+
+    background: rgba(28, 27, 27, 0.3);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 header .nav-bar ul{
@@ -35,6 +40,7 @@ header .nav-bar ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0;
 }
 
 header .nav-bar ul li {
