--- a/css/tickets.css
+++ b/css/tickets.css
@@ -364,6 +364,7 @@
 
 .ticket-count-main-wrapper{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -473,9 +474,24 @@
     top: 100%;
     left: 0;
     width: 100%;
-    /* max-height: 150px; */
+    max-height: 280px;
     overflow-y: auto;
     background-color: #fff;
+}
+
+.dropdown-content::-webkit-scrollbar {
+    width: 11px;
+}
+
+.dropdown-content::-webkit-scrollbar-thumb {
+    background-color: #8d8d8d;
+    border-radius: 20px;
+    border: 3px solid #fff;
+    background-clip: content-box;
+}
+
+.dropdown-content::-webkit-scrollbar-track {
+    background-color: transparent;
 }
 
 .dropdown-content label {
@@ -533,7 +549,6 @@ table {
 table td {
     text-align: left;
     padding: 1em;
-    /* max-width: 100px; */
 }
 
 table tr {
@@ -555,7 +570,11 @@ tfoot td{
     color: var(--primary-white);
 }
 
-@media only screen and (max-width: 400px) {
+.js-table-no-categories{
+    display: none;
+}
+
+/* @media only screen and (max-width: 400px) {
     .table-section{
         padding: 10px;
     }
@@ -594,5 +613,5 @@ tfoot td{
     table td {
         max-width: 100%;
     }
-}
+} */
 /**************** ticket page: duration section ****************/
