--- a/css/gallery.css
+++ b/css/gallery.css
@@ -33,6 +33,13 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: 200px;
     grid-auto-flow: dense;
+    transition: all 0.5s ease-in-out;
+}
+
+.gallery-main-container > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 img{
@@ -42,17 +49,16 @@ img{
     display: inline-block;
 }
 
-.gallery-main-container > div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .gallery-main-container > div > img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 2px;
+}
+
+.gallery-main-container .small{
+    grid-column: span 1;
+    grid-row: span 1;
 }
 
 .gallery-main-container .wide{
