--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ header{
     background: rgba(28, 27, 27, 0.3);
     -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
+    transition: 0.3s ease;
 }
 
 header .nav-bar ul{
@@ -51,7 +52,8 @@ header .nav-bar ul li a {
     display: block;
     text-decoration: none;
     font-size: 0.96em;
-    color: rgb(32, 32, 32);
+    /* color: rgb(32, 32, 32); */
+    color: var(--primary-white);
     text-transform: uppercase;
     padding: 14px;
     letter-spacing: 0.2em;
@@ -77,6 +79,10 @@ header .nav-bar ul li ul li{
     width: 100%;
 }
 
+header .nav-bar ul li ul li a{
+    color: black;
+}
+
 header .nav-bar ul li:focus-within > ul,
 header .nav-bar ul li:hover > ul{
     display: initial;
@@ -94,7 +100,7 @@ header label {
 }
 
 header label:hover{
-    color: var(--persian-green);
+    color: var(--primary-white);
 }
 
 @media only screen and (max-width: 700px) {
@@ -147,6 +153,24 @@ header label:hover{
     #menu-bar:checked ~ .nav-bar{
         display: flex;
     }
+}
+
+header.scrolled {
+    background: var(--primary-white);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+}
+
+header.scrolled .nav-bar ul li a {
+    color: black;
+    font-weight: 600;
+}
+
+header .nav-bar ul li a:hover {
+    background: var(--persian-green);
+    color: var(--primary-white);
+
+    background: rgba(62, 140, 143, 0.3);
+    color: rgba(62, 140, 143, 1);
 }
 /**************** header ****************/
 
@@ -1122,3 +1146,76 @@ footer {
     }
 }
 /****************  footer ****************/
+
+/****************  footer-social-list ****************/
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 25px 25px;
+    gap: 20px;
+    margin-left: 30px;
+  }
+  
+  /* for all social containers*/
+  .socialContainer {
+    width: 30px;
+    height: 30px;
+    background-color: rgb(44, 44, 44);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    transition-duration: .3s;
+  }
+  /* instagram*/
+  .containerOne:hover {
+    background-color: #d62976;
+    transition-duration: .3s;
+  }
+  /* twitter*/
+  .containerTwo:hover {
+    background-color: #00acee;
+    transition-duration: .3s;
+  }
+  /* linkdin*/
+  .containerThree:hover {
+    background-color: #0072b1;
+    transition-duration: .3s;
+  }
+  /* Whatsapp*/
+  .containerFour:hover {
+    background-color: #128C7E;
+    transition-duration: .3s;
+  }
+  
+  .socialContainer:active {
+    transform: scale(0.9);
+    transition-duration: .3s;
+  }
+  
+  .socialSvg {
+    width: 17px;
+  }
+  
+  .socialSvg path {
+    fill: rgb(255, 255, 255);
+  }
+  
+  .socialContainer:hover .socialSvg {
+    animation: slide-in-top 0.3s both;
+  }
+  
+  @keyframes slide-in-top {
+    0% {
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+  
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+/****************  footer-social-list ****************/
+  
