--- a/css/bentota.css
+++ b/css/bentota.css
@@ -110,7 +110,28 @@ p {
 
 /**************** bentota second section ****************/
 .bentota-second {
-    background-color: var(--persian-green);
+    background-color: var(--primary-white);
+    position: relative;
+    transition: 0.5s;
+    z-index: 1;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bentota-second::after {
+    content: ' ';
+    position: absolute;
+    /* top: 0; */
+    left: 50px;
+    width: 50%;
+    height: 500px;
+    text-decoration: none;
+    background: linear-gradient(315deg, rgba(196, 232, 194, 1), rgb(62, 140, 143));
+    border-radius: 8px;
+    transform: skewX(0deg);
+    transition: 0.5s;
 }
 
 .bentota-second hr{
@@ -137,7 +158,29 @@ p {
     align-items: center;
     margin: 0 auto;
     padding: 50px;
+
+    z-index: 3;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
+
+.box .content {
+    position: relative;
+    height: 400px;
+    padding: 20px 40px;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1;
+    transform: 0.5s;
+    color: var(--primary-black);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
 
 .bentota-second-text-container {
     display: flex;
@@ -168,6 +211,18 @@ p {
     .bentota-second-text-container {
         padding: 0;
         max-width: initial;
+    }
+
+    .bentota-second::after {
+       content: initial;
+    }
+
+    .bentota-second {
+        background: linear-gradient(315deg, rgba(196, 232, 194, 1), rgb(62, 140, 143));
+    }
+
+    .bentota-second-main-container{
+        backdrop-filter: blur(0px);
     }
 }
 
@@ -292,8 +347,6 @@ p {
 /*card*/
 .box {
     position: relative;
-    /* width: 220px;
-    height: 300px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -367,58 +420,58 @@ p {
 }
 
 .box span::before {
-top: -40px;
-left: 40px;
-width: 50px;
-height: 50px;
-opacity: 1;
-}
+    top: -40px;
+    left: 40px;
+    width: 50px;
+    height: 50px;
+    opacity: 1;
+    }
 
 .box span::after {
-content: '';
-position: absolute;
-bottom: 0;
-right: 0;
-width: 100%;
-height: 100%;
-border-radius: 8px;
-background: rgba(255, 255, 255, 0.1);
-backdrop-filter: blur(10px);
-opacity: 0;
-transition: 0.5s;
-box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-animation-delay: -1s;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    opacity: 0;
+    transition: 0.5s;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+    animation-delay: -1s;
 }
 
 .box span:after {
-bottom: -40px;
-right: 40px;
-width: 50px;
-height: 50px;
-opacity: 1;
+    bottom: -40px;
+    right: 40px;
+    width: 50px;
+    height: 50px;
+    opacity: 1;
 }
 
 .box .content {
-position: relative;
-height: 400px;
-padding: 20px 40px;
-background: rgba(255, 255, 255, 0.05);
-backdrop-filter: blur(10px);
-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-border-radius: 8px;
-z-index: 1;
-transform: 0.5s;
-color: var(--primary-black);
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+    position: relative;
+    height: 400px;
+    padding: 20px 40px;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    z-index: 1;
+    transform: 0.5s;
+    color: var(--primary-black);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .box .content h2 {
-font-size: 20px;
-color: #fff;
-margin-bottom: 10px;
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 10px;
 }
 /*card*/
 
@@ -528,7 +581,7 @@ margin-bottom: 10px;
 
 /**************** bentota fourth section ****************/
 .bentota-fourth {
-    background-color: var(--persian-green);
+    background: linear-gradient(315deg, rgba(196, 232, 194, 1), rgb(62, 140, 143));
 }
 
 .bentota-fourth-container h2 {
