--- a/css/bentota.css
+++ b/css/bentota.css
@@ -118,6 +118,7 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 0.5s;
 }
 
 .bentota-second::after {
@@ -358,26 +359,28 @@ p {
     content: ' ';
     position: absolute;
     /* top: 0; */
-    left: 50px;
-    width: 50%;
-    height: 500px;
+    /* left: 50px; */
+    width: 60%;
+    height: 600px;
     text-decoration: none;
     background: #fff;
     border-radius: 8px;
-    transform: skewX(15deg);
+    /* transform: skewX(15deg); */
+    transform: translateX(-50px);
     transition: 0.5s;
 }
 
 .box::after {
     content: '';
     position: absolute;
-    top: 0;
-    left: 50;
+    /* top: 0; */
+    left: 50px;
     width: 50%;
-    height: 100%;
+    height: 600px;
     background: #fff;
     border-radius: 8px;
-    transform: skewX(15deg);
+    /* transform: skewX(15deg); */
+    transform: translateX(-50px);
     transition: 0.5s;
     filter: blur(30px);
 }
@@ -453,7 +456,7 @@ p {
 
 .box .content {
     position: relative;
-    height: 400px;
+    height: 500px;
     padding: 20px 40px;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(10px);
