--- a/css/categories.css
+++ b/css/categories.css
@@ -6,12 +6,14 @@
     --mint: rgba(107, 189, 153, 1);
     --celadon: rgba(174, 207, 164, 1);
     --tea-green: rgba(196, 232, 194, 1);
+    --main-gradient: linear-gradient(315deg, rgba(196, 232, 194, 1), rgb(62, 140, 143));
     --letter-space: 5px;
     --line-height: 28px;
     --title-margin-bottom: 50px;
     --title-font-size: 20px;
 
     --box-shadow-main: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+    --box-shadow-gradient: 0px 15px 20px rgba(107, 189, 153, 0.2);
 }
 
 /**************** categories first section ****************/
@@ -71,10 +73,15 @@
 /**************** categories first section ****************/
 
 /**************** categories second section ****************/
+.main-section-2,
+.main-section-4{
+    background: var(--main-gradient);
+}
+
 .categories-second-section,
 .categories-second-section-2 {
-    background-color: var(--persian-green);
-    color: var(--primary-white);
+    /* background: var(--persian-green);
+    color: var(--primary-white); */
     padding: 50px;
     font-size: 0.9rem;
     margin: 0;
@@ -184,8 +191,8 @@
 /**************** categories fourth section ****************/
 .categories-fourth-section,
 .categories-fourth-section-2 {
-    background-color: var(--persian-green);
-    color: var(--primary-white);
+    /* background-color: var(--persian-green);
+    color: var(--primary-white); */
     padding: 50px;
     font-size: 0.9rem;
     margin: 0;
